hphp/test/zend/bad/ext/standard/tests/array/array_next_error1.php
<?php
function f() {
    return array(1, 2);
}
var_dump(next(f()));
?>